# agentic-flowstate-api

./: .gitignore  Cargo.toml  README.md  agents.json
_prompts/: competitive-research.txt  doc-drafter.txt  email.txt  evaluation.txt  exa-research.txt  execution.txt  life-planner.txt  meeting-notes.txt  planning.txt  pull-ticket.txt  research-synthesis.txt  research.txt  technical-research.txt  ticket-assistant.txt  ticket-creator.txt  ticket-planner.txt  vendor-research.txt  workspace-manager.txt
src/: auth_middleware.rs  email_fetcher.rs  main.rs  mcp_wrapper.rs  models.rs  pipeline_automation.rs  seed_templates.rs
src/agents/: executor.rs  hooks.rs  mod.rs  prompts.rs  types.rs  working_dir.rs
src/db/: client.rs  mod.rs
src/handlers/: agent_runs.rs  auth.rs  chat_stream.rs  conversations.rs  daily_plan.rs  data_events.rs  drafts.rs  email_thread_tickets.rs  emails.rs  epics.rs  life_planner.rs  meeting_transcription.rs  meetings.rs  mod.rs  pipeline_steps.rs  pipeline_templates.rs  pipelines.rs  project_workload.rs  slices.rs  ticket_history.rs  tickets.rs  transcripts.rs  workspace_manager.rs
src/handlers/agent_runs/: artifacts.rs  context.rs  conversions.rs  handlers.rs  mod.rs  sse_helpers.rs
src/utils/: db_helpers.rs  mod.rs  timestamp.rs
