[package]
name = "agentic_api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local MCP handlers library
mcp-handlers = { path = "../agentic-flowstate-mcp/mcp-handlers" }

# Ticketing system (SQLite data layer)
ticketing-system = { path = "../agentic-flowstate-ticketing-system" }

# Claude Agent SDK
cc-sdk = "0.4"

# Web framework
axum = { version = "0.7", features = ["default"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# SQLite
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"

# Streaming/async
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1"

# Regex for prompt processing
regex = "1.10"

# Git and filesystem operations
git2 = "0.18"
fs_extra = "1.3"
dirs = "5.0"
which = "6.0"
tempfile = "3.8"

# Command execution
tokio-process = "0.2"

# IMAP for email fetching
async-imap = "0.10"
async-native-tls = "0.5"
mail-parser = "0.9"
async-std = { version = "1.13", features = ["attributes"] }

# AWS SES for sending emails
aws-config = "1.1"
aws-sdk-sesv2 = "1.9"

[[bin]]
name = "agentic_api"
path = "src/main.rs"
